--- a/src/stylex-entrypoint.css
+++ b/src/stylex-entrypoint.css
@@ -3,3 +3,6 @@
  *
  * During bundling, the stylex webpack plugin will replace content with generated CSS
  */
+.__stylex_entrypoint__ {
+  content: 'noop';
+}
