--- a/src/stylex-entrypoint.css
+++ b/src/stylex-entrypoint.css
@@ -1,6 +1,8 @@
 /*
  * This is a noop file to be imported at the entrypoint of your App
  *
+ * This has to be an actual file as webpack requires a file to exist on disk
+ *
  * During bundling, the stylex webpack plugin will replace content with generated CSS
  */
 .__stylex_entrypoint__ {
